Cascading Change Log

3.2.0 [unreleased]

  Fixed issue where a triangle of split and joins on Apache Hadoop MapReduce would fail during planning.

  Fixed issue where trivial pipe assemblies that reduced to assemblies with multiple edges between two elements would
  fail, e.g. merging a file with itself.

  Added new planner rule for Apache Hadoop MapReduce and Apache Tez that will decorate any Tap instances on the
  accumulated side of a c.p.HashJoin with a platform specific version of the c.t.h.DistCacheTap.

  Added c.u.NullSafeComparator to replace all uses of j.u.Collections#reverseOrder() in tuple sorting/grouping
  code paths.

  Added c.f.h.MultiMapReduceFlow to provide support for a single c.f.Flow instance with many interrelated
  predefined c.a.h.m.JobConf instances that can be executed at once or added incrementally.

3.1.2

  Fixed issue on MapReduce that prevented counters from registering if incremented on a pipe assembly branch feeding the
  accumulated side of a c.p.HashJoin.

3.1.1

  Fixed issue with the MapReduce planner where a c.p.Checkpoint after a c.p.GroupBy merge would fail the planner.

3.1.0

  Fixed issue where Hadoop throws an NPE when polling for the current job state making the state polling loop unstable.

  Prevent c.t.h.Hfs and c.t.h.Lfs from setting the current configuration into stand-alone mode when running
  cluster-side and Hfs or Lfs are used to read/write data from within an operation or internally. This has historically
  had no other effect than emitting a confusing log message on the cluster slaves.

  Updated Apache Hadoop 2 based sub-projects to 2.7.2.

  Updated Apache Tez to 0.8.2.

  Updated jgrapht to 0.9.2.

  Fixed an issue on Apache MapReduce 1.x where an NPE will be thrown when fetching slice level counters on a map only
  job and the c.a.h.m.TaskCompletionEvent falsely identifies itself as a reducer task event.

  Fixed issue where c.m.a.URISanitizer would fail parsing Windows path names.
